--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Glo project extra</title>
   <script defer src="./script.js"></script>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-
+  <div class='time'></div>
+  <div class='time2'></div>
 </body>
 
 </html>
